2021-01-03, S3Ql 3.7.0

  * S3QL now requires Python 3.7 or newer.

  * S3QL now requires pyfuse3 of any version between 3.2.0 (inclusive) and 4.0 (exclusive).

  * S3QL now supports newer AWS S3 regions like eu-south-1.

  * mount.s3ql now again includes debugging information in its log output when
    encountering an unexpected exception. This was broken in version 3.4.0, resulting in
    mount.s3ql seemingly terminating at random in such a situation.

  * mount.s3ql now properly handles SIGTERM (instead of crashing). This means it exits as
    quickly as possible without data corruption. For a proper unmount, always use
    `umount.s3ql`, `umount`, or `fusermount -u` and wait for the mount.s3ql process to
    terminate.

  * More robust expired auth token detection for Google Storage.


2020-11-09, S3QL 3.6.0

  * Added ability to specify domain-name, project-domain-name and tenant-name as options
    for the OpenStack Swift (Keystone v3) backend for providers that prefer name to id.

  * The open() syscall supports the O_TRUNC flag now.

  * `mount.s3ql` now exits gracefully on CTRL-C (INT signal)

  * `mount.s3ql` now supports the `--dirty-block-upload-delay` option to influence the
    time before dirty blocks are written from the cache to the storage backend.

2020-09-04, S3QL 3.5.1

  * `s3qlctrl upload-meta` now works properly again (previously, only the first
    invocation had an effect).

  * The O_TRUNC flag of the open() syscall is no longer silently ignored, but
    the open() call fails with ENOTSUP. A proper implementation will hopefully
    follow soon.


2020-07-15, S3QL 3.5.0

  * S3QL now requires version 3.x rather than 1.x of the pyfuse3 module.

  * Triggering a metadata upload (either through ``s3qlctrl upload-meta`` or the
    ``--metadata-upload-interval``) works again (since release 3.4.0, this would continue
    to upload metadata continuously after the first trigger).

  * There is new backend for accessing Backblaze B2.
